manifests/geonetwork-dlm.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geonetwork-dlm-deployment
  labels:
    app: geonetwork-dlm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geonetwork-dlm
  template:
    metadata:
      labels:
        app: geonetwork-dlm
    spec:
      containers:
      - name: geonetwork-dlm
        resources: {}
        image: geonetwork-dlm:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /geonetwork/criticalhealthcheck
            port: 8080
          initialDelaySeconds: 30 # usually takes about 30 seconds for app to start, somtimes more.
          periodSeconds: 10
          failureThreshold: 4
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: geonetwork-dlm-service
spec:
  type: NodePort
  selector:
    app: geonetwork-dlm
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30100
