manifests/ogc-records-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ogc-records-api-deployment
  labels:
    app: ogc-records-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ogc-records-api
  template:
    metadata:
      labels:
        app: ogc-records-api
    spec:
      containers:
      - name: ogc-records-api
        resources: {}
        image: geonetwork/gn-cloud-ogc-api-records-service:4.2.9-0
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 3
          failureThreshold: 4
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ogc-records-api-service
spec:
  type: NodePort
  selector:
    app: ogc-records-api
  ports:
    - protocol: TCP
      port: 9201
      targetPort: 8080
      nodePort: 30200
